feat: add image and input component

--- a/polaroid.css
+++ b/polaroid.css
@@ -10,3 +10,4 @@
 @import url("./components/badge.css");
 @import url("./components/button.css");
 @import url("./components/card.css");
+@import url("./components/input.css");
