--- a/documentation/style.css
+++ b/documentation/style.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap");
 @import url("../polaroid.css");
 
+html {
+}
+
 :root {
 	--gray: #e5e5e5;
 	--light-gray: #f5f5f5;
@@ -79,6 +82,7 @@ p {
 	grid-area: main;
 	overflow-wrap: break-word;
 	overflow: auto;
+	scroll-behavior: smooth;
 }
 
 .main-container > section {
