--- a/documentation/style.css
+++ b/documentation/style.css
@@ -1,9 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap");
 @import url("../polaroid.css");
 
-html {
-}
-
 :root {
 	--gray: #e5e5e5;
 	--light-gray: #f5f5f5;
@@ -20,6 +17,7 @@ body {
 	color: var(--black);
 	font-family: "Inter", sans-serif;
 	background-color: var(--background-color);
+	overflow-x: hidden;
 }
 
 code {
@@ -81,7 +79,6 @@ p {
 .main-container {
 	grid-area: main;
 	overflow-wrap: break-word;
-	overflow: auto;
 	scroll-behavior: smooth;
 }
 
@@ -161,7 +158,7 @@ p {
 	color: var(--dark-gray);
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1024px) {
 	.logo {
 		display: none;
 	}
