--- a/utilities/reset.css
+++ b/utilities/reset.css
@@ -50,13 +50,18 @@ h3 {
 }
 
 h4 {
-	font-size: 1.6rem;
+	font-size: 1.8rem;
 	line-height: 2.4rem;
 }
 
 h5 {
-	font-size: 0.8rem;
+	font-size: 1rem;
 	line-height: 1.6rem;
+}
+
+h6 {
+	font-size: 0.8rem;
+	line-height: 1.2rem;
 }
 
 /* media */
