--- a/components/button.css
+++ b/components/button.css
@@ -48,13 +48,13 @@
 }
 
 /* floating action button */
-.btn-floating {
+.btn-float {
 	width: 5rem;
 	height: 5rem;
 	color: var(--white);
 	background-color: var(--dark-blue);
 }
 
-.btn-floating i {
+.btn-float i {
 	font-size: 2rem;
 }
