--- a/components/card.css
+++ b/components/card.css
@@ -4,7 +4,10 @@
 
 .card {
 	background-color: var(--white);
-	box-shadow: 0px 3px 6px 0px rgb(105 111 125 / 49%);
+}
+
+.card-shadow {
+	box-shadow: var(--shadow);
 }
 
 .card-badge {
@@ -47,7 +50,7 @@
 .overlay {
 	position: absolute;
 	bottom: 10rem;
-	background-color: var(--gray);
+	background-color: var(--dark-gray);
 	opacity: 0.8;
 }
 
