--- a/documentation/style.css
+++ b/documentation/style.css
@@ -139,11 +139,20 @@ p {
 	background-color: var(--gray);
 }
 
-.snippet {
+.example-snippet {
 	width: 100%;
 	height: 100%;
 	max-width: 95rem;
+}
+
+.code-snippet {
+	width: 100%;
+	max-width: 95rem;
 	overflow: auto;
+}
+
+.code-snippet iframe {
+	width: 100%;
 }
 
 .hide {
