--- a/utilities/utils.css
+++ b/utilities/utils.css
@@ -28,6 +28,7 @@
 	--dark-green: #166534;
 	--light-yellow: #fef9c3;
 	--dark-yellow: #854d0e;
+	--shadow: 0px 3px 6px 0px rgb(105 111 125 / 49%);
 }
 
 /* text colors */
