--- a/components/card.css
+++ b/components/card.css
@@ -4,7 +4,10 @@
 
 .card {
 	background-color: var(--white);
-	box-shadow: 0px 3px 6px 0px rgb(105 111 125 / 49%);
+}
+
+.card-shadow {
+	box-shadow: var(--shadow);
 }
 
 .card-badge {
