--- a/documentation/style.css
+++ b/documentation/style.css
@@ -143,7 +143,12 @@ p {
 	width: 100%;
 	height: 100%;
 	max-width: 95rem;
-	overflow: auto;
+}
+
+.snippet iframe {
+	width: 100%;
+	height: 100%;
+	max-width: 95rem;
 }
 
 .hide {
