--- a/utilities/utils.css
+++ b/utilities/utils.css
@@ -57,7 +57,7 @@
 }
 
 /* font sizes */
-.text-xsm {
+.text-xs {
 	font-size: 0.4rem;
 }
 
@@ -69,15 +69,15 @@
 	font-size: 1.6rem;
 }
 
-.text-regular {
+.text-lg {
 	font-size: 2.4rem;
 }
 
-.text-lg {
+.text-xl {
 	font-size: 3.2rem;
 }
 
-.text-xlg {
+.text-2xl {
 	font-size: 6.4rem;
 }
 
