feat: add documentation for lists

--- a/polaroid.css
+++ b/polaroid.css
@@ -11,3 +11,4 @@
 @import url("./components/button.css");
 @import url("./components/card.css");
 @import url("./components/input.css");
+@import url("./components/lists.css");
