--- a/utilities/utils.css
+++ b/utilities/utils.css
@@ -29,6 +29,7 @@
 	--light-yellow: #fef9c3;
 	--dark-yellow: #854d0e;
 	--shadow: 0px 3px 6px 0px rgb(105 111 125 / 49%);
+	--modal-background: rgba(0, 0, 0, 0.267);
 }
 
 /* text colors */
