--- a/polaroid.css
+++ b/polaroid.css
@@ -13,3 +13,5 @@
 @import url("./components/input.css");
 @import url("./components/lists.css");
 @import url("./components/modal.css");
+@import url("./components/navigation.css");
+
