feat: add navbar component in docs

--- a/polaroid.css
+++ b/polaroid.css
@@ -12,3 +12,4 @@
 @import url("./components/card.css");
 @import url("./components/input.css");
 @import url("./components/lists.css");
+@import url("./components/navigation.css");
