--- a/documentation/style.css
+++ b/documentation/style.css
@@ -139,16 +139,14 @@ p {
 	background-color: var(--gray);
 }
 
-.snippet {
-	width: 100%;
-	height: 100%;
-	max-width: 95rem;
-	overflow: auto;
-}
-
+.snippet,
 .snippet iframe {
 	width: 100%;
 	height: 100%;
+	max-width: 95rem;
+}
+
+.navbar-snippet {
 	max-width: 95rem;
 }
 
