feat: add toast component in docs

--- a/polaroid.css
+++ b/polaroid.css
@@ -14,3 +14,4 @@
 @import url("./components/lists.css");
 @import url("./components/modal.css");
 @import url("./components/navigation.css");
+@import url("./components/toast.css");
