feat: add grid component in docs

--- a/polaroid.css
+++ b/polaroid.css
@@ -15,3 +15,4 @@
 @import url("./components/modal.css");
 @import url("./components/navigation.css");
 @import url("./components/toast.css");
+@import url("./components/grid.css");
