fix: typo for rem in utility css

--- a/utilities/utils.css
+++ b/utilities/utils.css
@@ -4,7 +4,7 @@
 	--value-3: 2.4rem;
 	--value-4: 3.2rem;
 	--value-5: 4rem;
-	--value-6: 4.8em;
+	--value-6: 4.8rem;
 	--value-7: 5.6rem;
 	--value-8: 6.4rem;
 
