feat: add rating component

--- a/polaroid.css
+++ b/polaroid.css
@@ -17,3 +17,4 @@
 @import "./components/toast.css";
 @import "./components/grid.css";
 @import "./components/slider.css";
+@import "./components/rating.css";
