--- a/utilities/utils.css
+++ b/utilities/utils.css
@@ -17,16 +17,16 @@
 	--dark-gray: #a3a3a3;
 	--gray-hover: #737373;
 	--blue: #2563eb;
-	--light-blue: #dbeafe;
+	--light-blue: #bfdbfe;
 	--blue-hover: #3b82f6;
 	--dark-blue: #1e40af;
 	--red: #dc2626;
-	--light-red: #fee2e2;
+	--light-red: #fecaca;
 	--dark-red: #991b1b;
 	--green: #16a34a;
-	--light-green: #dcfce7;
+	--light-green: #bbf7d0;
 	--dark-green: #166534;
-	--light-yellow: #fef9c3;
+	--light-yellow: #fef08a;
 	--dark-yellow: #854d0e;
 	--shadow: 0px 3px 6px 0px rgb(105 111 125 / 49%);
 	--modal-background: rgba(0, 0, 0, 0.267);
