--- a/components/slider.css
+++ b/components/slider.css
@@ -4,6 +4,7 @@ input[type="range"] {
 	border-radius: 5px;
 	background: var(--light-gray);
 	border: 1px solid var(--dark-gray);
+	cursor: e-resize;
 }
 
 input[type="range"]::-webkit-slider-thumb {
